syntax = "proto3";


package auth;

option go_package = "./pkg/auth/pb";


service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse){}
    rpc Login(LoginRequest) returns (LoginResponse){}
    rpc Validate(ValidateRequest) returns (ValidateResponse){}
}



// Register

message RegisterRequest {
    string msisdn = 1;
    string name = 2;
    string username = 3;
    string password = 4;
}


message RegisterResponse {
    int64 status = 1;
    string error = 2;
}


// Login

message LoginResponse {
    int64 status = 1;
    string error = 2;
    string token = 3;
}


message LoginRequest {
    string msisdn = 1;
    string password = 2;
}


// Validate 

message ValidateRequest{
    string token = 1;
}


message ValidateResponse{
    int64 status = 1;
    string error = 2;
    int64 claim_id = 3;
}





